# CppJsLib

./: .gitignore  CMakeLists.txt  CppJsLib.cmake  CppJsLib.hpp  CppJsLib.js  CppJsLib.ts  LICENSE  README.md  _clang-format  conanfile.py  conanfile.txt  protocol.md  test.cpp
.github/workflows/: artifacts.yml  ccpp.yml  codeql-analysis.yml  release.yml
CppJsLibJava/src/: Main.java
CppJsLibJava/src/com/markusjx/cppjslib/: CppJsLib.java  Expose.java  WebGUI.java  package-info.java
CppJsLibJava/src/com/markusjx/cppjslib/exception/: CppJsLibException.java  CppOutOfMemoryException.java  ObjectAlreadyDeletedException.java  OperationNotSupportedException.java  PortAlreadyInUseException.java  package-info.java
CppJsLibJava/src/com/markusjx/cppjslib/functional/: ExposedFunction.java  ExposedVoidFunction.java
CppJsLibJava/src/com/markusjx/cppjslib/interfaces/: CExposedFunc.java  CExposedVoidFunc.java  ExposedFunc.java  ExposedVoidFunc.java  Handler.java  JavaScriptFunc.java  JavaScriptVoidFunc.java  LoggingFunction.java  package-info.java
CppJsLibJava/src/com/markusjx/cppjslib/nt/: CppJsLibNative.java
CppJsLibJava/src/com/markusjx/cppjslib/util/: utils.java
CppJsLibJava/src/markusjx/cppjslib/: CppJsLib.java  WebGUI.java  utils.java
CppJsLibJava/src/markusjx/cppjslib/functional/: ExposedFunction.java  ExposedVoidFunction.java
CppJsLibJava/src/markusjx/cppjslib/interfaces/: CExposedFunc.java  CExposedVoidFunc.java  ExposedFunc.java  ExposedVoidFunc.java  Handler.java  JavaScriptFunc.java  JavaScriptVoidFunc.java  LoggingFunction.java
CppJsLibJava/src/markusjx/cppjslib/nt/: CppJsLibNative.java
CppJsLibJs/: CppJsLib.js
JavaUtils/src/: JUtils.java
httpServerJs/: httpServer.js
src/: CMakeLists.txt  CppJsLib.cpp  CppJsLib.hpp  CppJsLibAll.hpp  FuncImporter.cpp  FuncImporter.hpp  FuncTypes.cpp  FuncTypes.hpp  InitCppJsLib.cmake  WebGui.cpp  WebGui.hpp
src/include/: cppJsLibJUtils.h
src/jni/: com_markusjx_cppjslib_nt_CppJsLibNative.h  jni.cpp  markusjx_cppjslib_nt_CppJsLibNative.h
src/utils/: EventDispatcher.cpp  EventDispatcher.hpp  WebGui.cpp  loggingfunc.cpp  loggingfunc.hpp  socket.cpp  socket.hpp  websocket.cpp  websocket.hpp
test/: CMakeLists.txt  DifferentWebServer.cpp  DifferentWebServer.hpp  index.html  main.cpp  test.cpp
test/WebSocketOnly/: index.html
test/web/: index.html
toDelete/CppJsLibJava/src/com/markusjx/cppjslib/: CppJsLib.java  package-info.java
toDelete/CppJsLibJava/src/com/markusjx/cppjslib/exception/: ObjectAlreadyDeletedException.java  PortAlreadyInUseException.java
toDelete/CppJsLibJava/src/com/markusjx/cppjslib/functional/: ExposedFunction.java  ExposedVoidFunction.java  package-info.java
toDelete/CppJsLibJava/src/com/markusjx/cppjslib/interfaces/: ExposedFunc.java  JavaScriptFunc.java  JavaScriptVoidFunc.java
toDelete/CppJsLibJava/src/com/markusjx/cppjslib/nt/: CppJsLibNative.java  package-info.java
toDelete/CppJsLibJava/src/com/markusjx/cppjslib/util/: package-info.java
toDelete/CppJsLibJs/: CppJsLib.js  CppJsLib_new.js
toDelete/src/: CMakeLists.txt  CppJsLib.cpp  InitCppJsLib.cmake
toDelete/src/utils/: EventDispatcher.hpp  loggingfunc.cpp  socket.hpp  websocket.hpp
ts/: CppJsLib.js  CppJsLib.ts  package-lock.json  package.json  tsconfig.json
